# brinkman-stokes

./: .envrc  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  WARP.md  index.html  main.py  params.json  pyproject.toml
BrinkmanStokes/: Manifest.toml  Project.toml  setup_pycall.ipynb
BrinkmanStokes/output/: brinkman_iters2.csv
BrinkmanStokes/src/: BrinkmanStokes.jl  output_utils.jl  sss.ipynb  sss.jl  test.jl  test.py
julia-parallel/efficient-operators/: hos-homg.jl  hos_homg.jl  speed_compare.jl  sss.jl
julia-parallel/julia-homg/: BaseCustom.jl  Basis.jl  Grids.jl  HexMeshGrids.jl  Hexmesh.jl  Mesh.jl  Refel.jl  Tensor.jl  TestGrid.jl  Xform.jl
julia-parallel/matrix-free-stacked/: hos_homg.jl  speed_compare.jl
julia-parallel/matrix-free-tensor/: ho_afun.jl  ho_afun2.jl  ho_afun3.jl  hos_homg.jl  hos_homg_setup.jl  mv_fun.jl  speed_compare.jl  sss.jl  tmp.jl
julia/efficient-operators/: hos_homg.jl  outline.txt  speed_compare.jl  sss.jl
julia/julia-homg/: BaseCustom.jl  Hexmesh.jl  Xform.jl
julia/matrix-free-stacked/: hos_homg.jl  sss.jl
julia/matrix-free-tensor/: hos_homg.jl  mv_fun.jl  speed_compare.jl  tmp.jl
julia/results/: threeD_orders_macbook.csv  threeD_orders_macbook.jl  twoD_orders_macbook.csv  twoD_orders_macbook.jl
matlab/: speed_compare.m
matlab/global-matrix/: gohome.m  gojulia.m  hos_homg.m  matvec.m  solve_square_stokes.m  speed_compare.m
matlab/homg/: ex2d.m
matlab/matrix-free-stacked/: gohome.m  matvec.m  mv_fun.m  solve_square_stokes.m
matlab/matrix-free-tensor/: contents.txt  hos_homg.m  solve_square_stokes.m
(+540 files in other folders)
